# RoadWatch-AI

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: tests.yml
deploy/: roadwatch-ai.service
models/: README.md
roadwatch_ai/: __init__.py  __main__.py  alerting.py  app.py  cli.py  config.py  detection.py  evidence.py  models.py  plates.py  speed.py  storage.py
tests/: test_alerting.py  test_app.py  test_cli.py  test_config.py  test_detection.py  test_evidence.py  test_models.py  test_plates.py  test_speed.py  test_storage.py
