[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadwatch-ai"
version = "0.1.0"
description = "Fixed-camera vehicle speed estimation, Indian plate OCR, evidence, and SMS alerts"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Mumin Farooq" }]
dependencies = [
  "easyocr>=1.7.1,<2",
  "numpy>=1.24,<3",
  "opencv-python>=4.9,<5",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "twilio>=9.0,<10",
  "ultralytics>=8.3,<9",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
roadwatch-ai = "roadwatch_ai.cli:main"

[tool.setuptools.packages.find]
include = ["roadwatch_ai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
